src/styles/style.css
/* COLOR PALETTE */
:root {
    --red: #C1292E;
    --blue: #235789;
    --yellow: #F1D302;
    --white: #FDFFFC;
    --black: #161925;
    --card-white: #dbd4d3;
}

html{
/* background-color: var(--black); */
cursor: url('/images/cursor3.png'), pointer;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.99em;
    font-family: 'Staatliches', sans-serif;
    margin: 0;
    height: 70px;
}

.header-icons {
    display: flex;
    align-items: center;
}

.home-button {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    background-color: var(--card-white);
    color: var(--black);
    border-radius: 50%;
    margin-right: 10px;
    text-decoration: none;
}

.toggle-switch {
    position: relative;
    display: inline-block;
    width: 40px;
    height: 20px;
}

.toggle-switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: url('/images/cursor3.png'), pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--red);
    transition: .4s;
    border-radius: 20px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 16px;
    width: 16px;
    left: 2px;
    bottom: 2px;
    background-color: var(--black);
    transition: .4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: var(--blue);  
}

input:checked + .slider:before {
    transform: translateX(20px);
}
body {
    background-color: var(--white);
    transition: background-color 0.3s ease;
}

body.dark-mode {
    background-color: var(--black);
    /* color: var(--white); */
}

#wordGrid {
    margin-top: auto;
    margin: auto;
    display: grid;
    gap: 10px;
    grid-template-columns: repeat(5, 1fr);
}
#wordGrid .loading {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: var(--red);
    font-size: 2.99em;
    font-family: 'Staatliches', sans-serif;
    margin: 0;
  }

.card {
    height: auto;
    align-items: center;
    align-content: center;
    text-align: center;
    min-height: 1.99em;
    background-color: var(--card-white);
    color: var(--black);
    border: none;
    border-radius: 8px;
    font-size: 1.72em;
    font-weight: 600;
    font-family: 'Staatliches', sans-serif;
}



.navWrapper a {
    display: inline-block;
    height: auto;
    padding: 10px 20px;
    margin: 10px;
    background-color: var(--blue);
    color: var(--white);
    border: none;
    border-radius: 24px;
    font-size: 1.72em;
    font-weight: 600;
    font-family: 'Staatliches', sans-serif;
    text-decoration: none;
}
.navWrapper a:hover {
    background-color: var(--red);
    color: var(--white);
    cursor: url('/images/cursor3.png'), pointer;
}


.navWrapper button {
    display: inline-block;
    height: auto;
    padding: 10px 20px;
    margin: 10px;
    background-color: var(--blue);
    color: var(--white);
    border: none;
    border-radius: 24px;
    font-size: 1.72em;
    font-weight: 600;
    font-family: 'Staatliches', sans-serif;
    text-decoration: none;
}
.navWrapper button:hover {
    background-color: var(--red);
    color: var(--white);
    cursor: url('/images/cursor3.png'), pointer;
}

.navWrapper input[type="text"] {
    display: inline-block;
    width: 150px;
    height: auto;
    padding: 10px 20px;
    margin: 10px;
    background-color: var(--white);
    color: var(--black);
    border: 3px solid var(--blue);
    border-radius: 24px;
    font-size: 1.72em;
    font-weight: 600;
    font-family: 'Staatliches', sans-serif;
    text-decoration: none;
    transition: background-color 0.3s ease, border-color 0.3s ease;
    outline: none;
    text-align: center;
}
  
.navWrapper input[type="text"]:hover,
.navWrapper input[type="text"]:focus {
    
    border-color: var(--red);
    cursor: url('/images/cursor3.png'), pointer;
}
.instructions {
    background-color: #f9f9f9;
    border: 1px solid #ccc;
    border-radius: 8px;
    padding: 20px;
    margin-bottom: 20px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}
  
.instructions p {
    font-size: 16px;
    line-height: 1.5;
    margin-bottom: 10px;
  }
  
  .instructions h2 {
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 10px;
}
  
.instructions a {
    color: #0366d6;
    text-decoration: none;
}
  
.instructions a:hover {
    text-decoration: underline;
}
  
.instructions.dark-mode {
    color: #FDFFFC;
    background-color: #555;
}

  
@media only screen and (max-width: 600px) {
    #wordGrid {
        margin-top: auto;
        margin: auto;
        display: grid;
        gap: 3px;
        width: 90vw;
    }
    .card {
        width: auto;
        align-items: center;
        align-content: center;
        text-align: center;
        font-size: 1.0em;
    }
    .navWrapper input[type="text"] {
        display: inline-block;
        width: 75px;
        height: auto;
        padding: 6px 20px;
        margin: 10px;
        font-size: 1.32em;
    }
    .navWrapper button {
        display: inline-block;
        height: auto;
        padding: 10px 20px;
        margin: 10px;
        font-size: 1.22em;
    }

    .navWrapper a {
        display: inline-block;
        height: auto;
        padding: 10px 20px;
        margin: 10px;
        font-size: 1.22em;
    }
    .navWrapper #home_nav {
        text-align: center;
    }
    }
    

